--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,131 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --dark-gray: #dadce0;
+  --light--gray: #f1f3f4;
+  --blue-color: #4285f4;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  width: 100%;
+}
+
+button {
+  cursor: pointer;
+  outline: none;
+  border: none;
+}
+
+input {
+  border: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+button:focus {
+  outline: none;
+}
+
+.main-container {
+  margin: auto;
+  padding: 1em;
+  width: 100%;
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
+}
+
+.keyboard-container {
+  position: relative;
+  width: 100%;
+}
+
+.number-keyboard-container {
+  width: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+}
+
+.key-btn {
+  height: 2em;
+  width: 3em;
+  font-size: 1.5em;
+  font-weight: 900;
+  border-radius: 10px;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.screen-container {
+  display: grid;
+  grid-template-areas:
+    "ac-btn current current"
+    "result result result";
+  height: 7em;
+  width: 100%;
+  border: 2px solid var(--blue-color);
+  margin: 1em 0;
+}
+
+.current-operation {
+  grid-area: current;
+  font-size: 1.5em;
+  text-align: end;
+  margin-top: 20px;
+  padding-right: 1em;
+}
+
+.result-operation {
+  grid-area: result;
+  font-size: 2em;
+  text-align: end;
+  padding-right: 1em;
+}
+
+#ac-btn {
+  grid-area: ac-btn;
+  width: 1.5em;
+  background-color: transparent;
+}
+
+.calculator-KeyboardType {
+  height: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  align-items: center;
+  grid-gap: 10px;
+  width: 8em;
+  height: 3em;
+  margin-top: 1em;
+}
+
+.calculator-KeyboardType button {
+  height: 100%;
+}
+
+.scientific-keyboard {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 1000;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  background-color: #ffffff;
+}
+
+.scientific-keyboard .key-btn {
+  font-size: 1.2em;
 }
