--- a/src/index.css
+++ b/src/index.css
@@ -10,122 +10,54 @@
   box-sizing: border-box;
 }
 
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  width: 100%;
-}
-
 button {
+  display: block;
   cursor: pointer;
-  outline: none;
-  border: none;
+  background-color: #f40c00;
+  padding: 0.5em;
+  font-size: 18px;
+  font-weight: 700;
+  color: #fff;
+  margin: 0.4em auto;
 }
-
-input {
-  border: none;
-}
-
-input:focus {
-  outline: none;
-}
-
-button:focus {
-  outline: none;
-}
-
-.main-container {
-  margin: auto;
-  padding: 1em;
-  width: 100%;
-  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.2);
-}
-
-.keyboard-container {
+.container {
   position: relative;
-  width: 100%;
-}
-
-.number-keyboard-container {
-  width: 100%;
+  width: 800px;
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 10px;
+  height: 800px;
+  background: url("./image/cfi.jpg");
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
-.key-btn {
-  height: 2em;
-  width: 3em;
-  font-size: 1.5em;
-  font-weight: 900;
-  border-radius: 10px;
-  color: rgba(0, 0, 0, 0.7);
-}
-
-.screen-container {
-  display: grid;
-  grid-template-areas:
-    "ac-btn current current"
-    "result result result";
-  height: 7em;
-  width: 100%;
-  border: 2px solid var(--blue-color);
-  margin: 1em 0;
-}
-
-.current-operation {
-  grid-area: current;
-  font-size: 1.5em;
-  text-align: end;
-  margin-top: 20px;
-  padding-right: 1em;
-}
-
-.result-operation {
-  grid-area: result;
-  font-size: 2em;
-  text-align: end;
-  padding-right: 1em;
-}
-
-#ac-btn {
-  grid-area: ac-btn;
-  width: 1.5em;
-  background-color: transparent;
-}
-
-.calculator-KeyboardType {
-  height: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+.input-container {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
   align-items: center;
-  grid-gap: 10px;
-  width: 8em;
-  height: 3em;
-  margin-top: 1em;
-}
-
-.calculator-KeyboardType button {
-  height: 100%;
-}
-
-.scientific-keyboard {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 1000;
-  width: 100%;
-  height: 100%;
   margin: auto;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 10px;
-  background-color: #ffffff;
 }
 
-.scientific-keyboard .key-btn {
-  font-size: 1.2em;
+.form-control {
+  margin: auto;
+  width: 800px;
+  border: 2px solid red;
+}
+
+.name {
+  position: absolute;
+  left: 5em;
+  top: 24.5em;
+  color: #f40c00;
+  font-size: 24px;
+  font-weight: 900;
+  font-family: "Rubik", sans-serif;
+  max-width: 15em;
+}
+
+.name-input {
+  padding: 1em;
+  border: 2px solid #f40c00;
+  margin: 1em;
 }
